--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <html>
-    <head></head>
+    <head>
+        <script defer src="./bundle.js"> </script>
+    </head>
     <body>
-        <div id ="content"> 
+        <div id="content"> 
             test 
         </div>
     </body>
